--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 
 header{
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 h1{
@@ -33,12 +33,36 @@ h1{
 }
 
 .card{
-    height: 70px;
-    width: calc((100% / 3) - 20px);
-    margin: 10px 10px;
+    height: 90px;
+    width: calc((100% / 3) - 100px);
+    margin: 20px 50px;
+    line-height: 23px;
     float: left;
-
-    /*debug*/
-    background-color: blueviolet;
-    border: 4px solid black;
+    background-color: rgb(15, 14, 23);
 }
+
+.contenuto{
+    height: 100%;
+    width: 100%;
+    float: left;
+    box-shadow: 2px 2px 2px #333333;
+}
+
+
+.contenuto img{
+    height: 100%;
+    float: left;
+}
+
+.dati-dipendente{
+    float: left;
+    margin: 10px 20px;
+    color: white;
+}
+
+.email{
+    color: rgb(93, 189, 253);
+    cursor: pointer;
+}
+
+
